--- a/app.json
+++ b/app.json
@@ -16,12 +16,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "jp.workabroad.memoapp",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "jp.workabroad.memoapp",
+      "versionCode": 1,
+      "permissions": [],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "./assets/backColor.png"
       }
     },
     "web": {
